[gd_scene load_steps=11 format=3 uid="uid://d2e3f4g5h6i7j"]

[ext_resource type="Script" path="res://scripts/ui/pet/pet_introduction_popup.gd" id="1"]
[ext_resource type="Theme" uid="uid://bo8g4sssf0ihw" path="res://themes/game_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" path="res://assets/sprites/happy-dragon.png" id="3_happy_dragon"]

[sub_resource type="AtlasTexture" id="AtlasTexture_frame0"]
atlas = ExtResource("3_happy_dragon")
region = Rect2(0, 0, 304, 344)

[sub_resource type="AtlasTexture" id="AtlasTexture_frame1"]
atlas = ExtResource("3_happy_dragon")
region = Rect2(304, 0, 304, 344)

[sub_resource type="AtlasTexture" id="AtlasTexture_frame2"]
atlas = ExtResource("3_happy_dragon")
region = Rect2(608, 0, 304, 344)

[sub_resource type="AtlasTexture" id="AtlasTexture_frame3"]
atlas = ExtResource("3_happy_dragon")
region = Rect2(912, 0, 304, 344)

[sub_resource type="AtlasTexture" id="AtlasTexture_frame4"]
atlas = ExtResource("3_happy_dragon")
region = Rect2(1216, 0, 304, 344)

[sub_resource type="AtlasTexture" id="AtlasTexture_frame5"]
atlas = ExtResource("3_happy_dragon")
region = Rect2(1520, 0, 304, 344)

[sub_resource type="SpriteFrames" id="SpriteFrames_happy_dragon"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_frame0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frame1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frame2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frame3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frame4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frame5")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="PetIntroductionPopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 650)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Meet Your New Companion!"
horizontal_alignment = 1

[node name="DragonAnimationContainer" type="SubViewportContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
stretch = true

[node name="SubViewport" type="SubViewport" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DragonAnimationContainer"]
transparent_bg = true
size = Vector2i(120, 120)

[node name="HappyDragonAnimation" type="AnimatedSprite2D" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DragonAnimationContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(60, 60)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_happy_dragon")
autoplay = "default"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PersonalityLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Unique Trait: Curious"
horizontal_alignment = 1

[node name="PersonalityDescription" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "This dragon loves to explore and discover new things!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="InfoLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "This special dragon will be your companion throughout your journey.
They'll explore the world and bring you treasures!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameInputLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Every friendship starts with a name.
What will you call them?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="NameInput" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Enter a name (max 20 characters)"
alignment = 1
max_length = 20

[node name="ConfirmButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "BEGIN OUR JOURNEY"
